# random-refactor-java

./: .gitignore  LICENSE  README.md  java-refactor.cabal  parse_errors.txt  stack.yaml  testFile.java
app/: Main.hs
src/: Format.hs  Refactor.hs
