name:                java-refactor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/java-refactor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Refactor, Format
  build-depends:       base >= 4.7 && < 5
                     , language-java
                     , mtl
                     , containers
                     , random
                     , random-shuffle

  ghc-options:       -Wall

  default-language:    Haskell2010

executable java-refactor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , java-refactor
                     , language-java
                     , random
                     , mtl
                     , containers
  default-language:    Haskell2010

test-suite java-refactor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , java-refactor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/java-refactor
